# flake-update-diff

./: .gitignore  .poetry-git-overlay.nix  LICENSE  README.md  checks.nix  flake.nix  main.py  poetry-git-overlay.nix  pyproject.toml  shell.nix  treefmt.toml
app/: common.py  flake_show.py  main.py
flupdt/: cli.py  common.py  flake_eval.py  flake_show.py  main.py  model.py
hydra/: jobsets.nix  spec.json
