[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alice Huston <aliceghuston@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"

[tool.poetry.scripts]
main = "app.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
