[tool.poetry]
name = "flupdt"
version = "0.1.0"
description = """\
Nix flake update diff checker. \
Useful for validating and diffing flakes after updates. \
Short for fl(ake) up(date) d(iff).\
"""
authors = ["Alice Huston <aliceghuston@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flupdt" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
rad_development_python = {git = "https://github.com/RAD-Development/rad-development-python", branch = "feature/nix"}

[tool.poetry.scripts]
flupdt = "flupdt.main:main"
flake-update-diff = "flupdt.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
